update the footer link

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
         <button type="submit">Register now</button>
       </form>
     </section>
+    <p>Already have an account? <a href="">Sign in</a></p>
   </body>
 </html>
